--- a/ZHO/index.html
+++ b/ZHO/index.html
@@ -50,11 +50,37 @@
             width: 100%;
             position: relative;
             z-index: 5;
+            height: 100vh;
+            background-image: url("https://www.nyc.gov/assets/hpd/images/content/pages/about/affordable-housing.jpg");
+            background-position: top;
+            background-repeat: no-repeat;
+            background-size: cover;          
         }
         #header h1, #header h2, #header p {
             margin: 0;
             padding: 2vh 2vw;
-            text-align: center;
+            text-align: left;
+        }
+
+        #header h1 {
+            font-size: 7vh;
+            color: white;
+            padding-top: 40vh;
+            Font-weight:700;
+            font-family: 'Titillium Web', sans-serif;
+        }
+        #header h2{
+            font-size: 3vh;
+            color: white;
+            Font-weight:400;
+            font-family: 'Titillium Web', sans-serif;
+        }
+        #header p{
+            font-size: 2vh;
+            color: white;
+            Font-weight:400;
+            font-family: 'Titillium Web', sans-serif;
+        }
         }
         #footer {
             width: 100%;
